Thumbnail: Fixed Thumbnail out of bounds bug

--- a/app/_component/_themeAble/_text/_thumbnail/thumbnail.css
+++ b/app/_component/_themeAble/_text/_thumbnail/thumbnail.css
@@ -22,9 +22,9 @@ background-box{
     position: absolute;
     display: block;
     top: 0;
-    left: -100px;
-    right: -100px;
-    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     box-sizing: border-box;
 }
 
